@@ -1025,7 +1025,7 @@ MySQL_Prepared_ResultSet::relative(const int rows)
 		}
 	}
 
-	return (row_position < (num_rows + 1) || row_position > 0);
+	return (row_position > 0 && row_position <= num_rows);
 }
 /* }}} */
 
