@@ -1,12 +1,16 @@
 Beta   1.0.4 - 2009-03-xx
 
-- Added Windows installer (Georg)
+- Added Windows installer. (Georg)
 
 - Bumping up CMake minimum version requirement from 2.4.2 to 2.6.2.
   We need the latest version for Windows. (Lawrin)
 
 - Added "metadataUseInfoSchema" to connection propery map which allows you
   to control the use of the INFORMATION_SCHEMA for meta data. (Andrey)
+
+- Fixed a bug in all implementations of ResultSet::relative() which was
+  giving wrong return value although positioning was working correctly.
+
 
 Alpha  1.0.3 - 2009-03-03
 
